plugins {
    id "com.gradleup.shadow" version "9.4.1"
    id "java"
}

group "net.minecraft"
version "1.12.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
    maven {
        url = "https://github.com/SkidJava/Skid-central/raw/repository/"
    }
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    implementation("com.github.oshi:oshi-core:6.6.5")
    implementation("com.ibm.icu:icu4j:78.3")
    implementation("info.picocli:picocli:4.7.7")

    implementation("io.netty:netty-buffer:4.2.10.Final")
    implementation("io.netty:netty-transport:4.2.10.Final")
    implementation("io.netty:netty-transport-native-epoll:4.2.10.Final")
    implementation("io.netty:netty-handler:4.2.10.Final")

    implementation("com.google.guava:guava:33.6.0-jre")
    implementation("org.apache.commons:commons-lang3:3.20.0")
    implementation("commons-io:commons-io:2.22.0")
    implementation("commons-codec:commons-codec:1.22.0")
    implementation("com.google.code.gson:gson:2.14.0")
    implementation("org.apache.commons:commons-compress:1.28.0")
    implementation("org.apache.httpcomponents:httpclient:4.5.14")
    implementation("commons-logging:commons-logging:1.3.6")
    implementation("org.apache.httpcomponents:httpcore:4.4.16")
    implementation("it.unimi.dsi:fastutil:8.5.18")
    implementation("org.apache.logging.log4j:log4j-api:2.25.4")
    implementation("org.apache.logging.log4j:log4j-core:2.25.4")

    def lwjglVersion = "3.4.1"
    def lwjglNatives = "natives-windows"

    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

    implementation("org.lwjgl:lwjgl")
    implementation("org.lwjgl:lwjgl-stb")
    implementation("org.lwjgl:lwjgl-glfw")
    implementation("org.lwjgl:lwjgl-openal")
    implementation("org.lwjgl:lwjgl-opengl")

    runtimeOnly("org.lwjgl:lwjgl::$lwjglNatives")
    runtimeOnly("org.lwjgl:lwjgl-glfw::$lwjglNatives")
    runtimeOnly("org.lwjgl:lwjgl-opengl::$lwjglNatives")
    runtimeOnly("org.lwjgl:lwjgl-openal::$lwjglNatives")
    runtimeOnly("org.lwjgl:lwjgl-stb::$lwjglNatives")

    implementation("org.joml:joml:1.10.8")
    implementation("com.mojang:authlib:1.5.25")
}
